compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__blocks__block_ending_in_assignment.snap
---
source: compiler-core/src/fsharp/tests/blocks.rs
assertion_line: 5
expression: "\nfn go() {\n  let x = {\n    1\n    2\n    let y = 3\n  }\n  x\n}\n"
---
module rec my.``mod``
let go(): int = begin
    let x = begin
        1
        2
        let y = 3
        y
    end
    x
end
