compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__blocks__blocks_returning_functions.snap
---
source: compiler-core/src/fsharp/tests/blocks.rs
assertion_line: 188
expression: "\nfn b() {\n  {\n    fn(cb) { cb(1) }\n  }\n  {\n    fn(cb) { cb(2) }\n  }\n  3\n}\n"
---
module rec my.``mod``
let b(): int = begin
    begin
        fun(cb: int -> 'u11) -> cb (1) 
    end
    begin
        fun(cb: int -> 'u14) -> cb (2) 
    end
    3
end
