compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__blocks__concat_blocks.snap
---
source: compiler-core/src/fsharp/tests/blocks.rs
expression: "\nfn foo(f, a, b) {\n  {\n    a\n    |> f\n  } <> {\n    b\n    |> f\n  }\n}\n"
---
module rec my.``mod``

let private foo (f: 'u10 -> string) (a: 'u10) (b: 'u10) = begin
    begin
        begin
            let _pipe = a
            (f (_pipe))
        end
    end + begin
        begin
            let _pipe = b
            (f (_pipe))
        end
    end
end
