compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__blocks__left_operator_sequence.snap
---
source: compiler-core/src/fsharp/tests/blocks.rs
expression: "\nfn go() {\n  1 == {\n    1\n    2\n  }\n}\n"
---
module rec my.``mod``

let private go () = begin
    1L = begin
        1L
        2L
    end
end
