compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__blocks__nested_multiexpr_blocks_with_case.snap
---
source: compiler-core/src/fsharp/tests/blocks.rs
assertion_line: 110
expression: "\nfn go() {\n  let x = {\n    1\n    {\n      2\n      case True {\n        _ -> 3\n      }\n    }\n  }\n  x\n}\n"
---
module rec my.``mod``
let go(): int = begin
    let x = begin
        1
        begin
            2
            match true with
            | _ ->
                3
        end
    end
    x
end
